# crop-circle-atlas

./: .env.example  .gitignore  DATA_RIGHTS.md  LICENSE  README.md  docker-compose.geolocator.yml  requirements.txt
data/: alignment_hits.csv  (+46 more)
services/geolocator/: Dockerfile  README.md  pyproject.toml
services/geolocator/benchmarks/: evaluator-only-ground-truth.json  mvp-results.json  reviewed-cases-input.json
services/geolocator/src/crop_circle_geo/: __init__.py  adapters.py  api.py  artifacts.py  cli.py  config.py  mcp_server.py  models.py  overlay.py  provenance.py  rights.py  service.py  spatial.py  tiles.py  workflow.py
services/geolocator/src/crop_circle_geo/benchmark/: __init__.py  manifest.py  metrics.py  runner.py  synthetic.py
services/geolocator/src/crop_circle_geo/imagery/: __init__.py  base.py  local_raster.py  planetary_computer.py  stac.py  usgs_m2m.py
services/geolocator/src/crop_circle_geo/matching/: __init__.py  base.py  iterative_registration.py  lightglue_adapter.py  opencv_sift.py  vismatch_adapter.py
services/geolocator/src/crop_circle_geo/orientation/: __init__.py  bearing.py  propagation.py
services/geolocator/tests/: conftest.py  test_api.py  test_benchmark_leakage.py  test_checkpoints.py  test_decision_gate.py  test_homography.py  test_imagery_providers.py  test_job_service.py  test_local_raster_pipeline.py  test_mcp_tools.py  test_orientation.py  test_overlay.py  test_rights.py  test_schemas.py  test_serialization.py  test_service_pipeline.py  test_spatial.py  test_state_machine.py  test_synthetic_benchmark.py  test_uncertainty.py
(+115 files in other folders)
